2017-05-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (tape_action): Use a new tape if it lost less
	  tape space
	* installcheck/tape_action.pl: Add tests

2017-05-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (wait_children): Use smaller sleep time

2017-05-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/runtar.c: Accept --verbose argument

2017-05-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* ReleaseNotes, NEWS: Typo

2017-05-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-util.c: Fix for compiler warning

2017-05-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS, ReleaseNotes: 3.4.4

2017-05-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/match.c (make_template): Fix
	* installcheck/Amanda_Util.pl: Check fix

2017-04-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amservice.c (handle_result): Call
	  security_close_connection
	* common-src/security-util.c (sec_tcp_conn_put): Kill the subprocess
	* common-src/security-util.h (sec_tcp_conn_put): Remove prototype
	* server-src/amcheck.c (handle_result): Call security_close_connection

2017-04-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Get a new curl handle after a 503 error. To force
	  closing the connection and opening a new one

2017-04-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/Makefile.am (INSTALLPERMS_exec): Add ambind, remove
	  amservice
	* server-src/Makefile.am (INSTALLPERMS_exec): Remove amcheck, dumper
	  and planner

2017-04-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS: S3 device: openstack keystone v3 support
	* device-src/s3-device.c: PROJECT-NAME and DOMAIN-NAME device
	  properties
	* device-src/s3-device.h (struct _S3Device): Add project_name and
	  domain_name fields
	* device-src/s3.c: Get token from keystone v3
	* device-src/s3.h (s3_open): Change prototype.