@@ -1,4 +1,8 @@
 2017-05-08  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* common-src/amjson.c, common-src/security-util.c,
+	  recover-src/extract_list.c:Fix bug found by coverity
+
+2017-05-08  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* server-src/driver.c (tape_action): Use a new tape if it lost less
 	  tape space
 	* installcheck/tape_action.pl: Add tests
